@@ -11,6 +11,8 @@ TODO:
 
 2017.10.12	K.L.	<k.l.lambda@gmail.com>
 
+	>	TcpBridge: use base64 encoding for data transmission.
+
 	+	Base64Helper added.
 
 
